@@ -67,8 +67,7 @@ class _Group
 		$this->bool_use_draft = $bool_use_draft;
 		$this->hours_required_by_type = array();
 		// Always override if the global variable is set.
-		if ($GLOBALS["bool_use_draft"] == true)
-		{
+		if ($GLOBALS["fp_advising"]["bool_use_draft"] == true) {
 			$this->bool_use_draft = true;
 		}
 
